--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -1111,6 +1111,7 @@
        (use-package citar-org-roam
          :ensure t
          :after (citar org-roam)
+         :if (file-exists-p my:f:bib)
          :config
          (citar-org-roam-mode)
          (setq citar-org-roam-note-title-template "${title}")
